--- a/src/components/FinishUpPage/FinishUpPage.module.css
+++ b/src/components/FinishUpPage/FinishUpPage.module.css
@@ -1,3 +1,47 @@
-.change {
-    text-decoration: underline;
+.purchases{
+    @apply flex flex-col;
+}
+
+.purchases-header{
+    @apply flex flex-row items-center justify-between;
+}
+
+.purchases-header h5{
+    @apply text-lg font-semibold text-blue-900;
+}
+
+.change-purchases {
+    @apply text-lg font-semibold text-gray-400 underline;
+}
+
+.plan-amount{
+    @apply text-xl font-bold text-blue-900;
+}
+
+.purchased-add-ons{
+    @apply my-5 border-t-2 border-gray-200 py-2;
+}
+
+.purchased-add-on{
+    @apply flex flex-row justify-between;
+}
+
+.purchased-add-on span:first-of-type{
+    @apply text-lg font-semibold text-gray-400;
+}
+
+.purchased-add-on span:last-of-type{
+    @apply text-xl font-semibold text-blue-900;
+}
+
+.total-container{
+    @apply flex flex-row justify-between;
+}
+
+.total-container span:first-of-type{
+    @apply inline text-lg font-semibold text-gray-400;
+}
+
+.total-container span:last-of-type{
+    @apply text-xl font-bold text-purple-900;
 }
