--- a/src/components/SelectPlanPage/SelectPlanPage.module.css
+++ b/src/components/SelectPlanPage/SelectPlanPage.module.css
@@ -19,7 +19,11 @@ section h3{
 }
 
 .plan {
-    @apply my-2 grid grid-cols-2 grid-rows-2 gap-x-0 rounded-lg border-2 border-purple-700 bg-purple-100 p-3;
+    @apply my-2 grid grid-cols-2 grid-rows-2 gap-x-0 rounded-lg border-2 border-gray-400 p-3;
+}
+
+.selected-plan{
+    @apply border-2 border-purple-700 bg-purple-100;
 }
 
 .plan img{
