--- a/src/components/StepsBar/StepsBar.module.css
+++ b/src/components/StepsBar/StepsBar.module.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 nav {
-    @apply mb-10;
+    @apply mb-10 py-10 absolute top-0 h-1/3 w-full bg-cover;
 }
 
 .ul {
@@ -13,6 +13,18 @@ nav {
 
 
 .ul li {
-    @apply h-10 w-10 rounded-full border-2 border-white bg-blue-300 text-center text-2xl font-semibold;
+    @apply h-10 w-10 rounded-full border-2 border-white text-center text-2xl text-white font-semibold;
+}
+
+.current-page-li{
+    @apply bg-blue-300 border-0;
+}
+
+.current-page{
+    @apply text-blue-900;
+}
+
+.caption{
+    @apply flex flex-col hidden;
 }
 
