--- a/src/components/NavigationButtons/NavigationButtons.module.css
+++ b/src/components/NavigationButtons/NavigationButtons.module.css
@@ -2,6 +2,10 @@ footer{
     @apply w-full absolute bottom-0 flex h-20 flex-row justify-between bg-white p-5;
 }
 
+.hidden-prev-btn{
+    @apply hidden;
+}
+
 .prev-btn{
     @apply font-semibold text-gray-400;
 }
