--- a/src/components/PersonalFormPage/PersonalFormPage.module.css
+++ b/src/components/PersonalFormPage/PersonalFormPage.module.css
@@ -1,13 +1,5 @@
 .form-page {
-    @apply relative top-24 mx-auto flex w-11/12 flex-col rounded-2xl border-2 border-blue-400 bg-white p-7;
-}
-/*todo: needs to be generalized for each section title*/
-section h1{
-    @apply text-3xl font-bold text-blue-900;
-}
-
-.form-page h3{
-    @apply my-6 text-xl font-normal text-gray-400;
+    @apply relative top-24 h-2/3 mx-auto p-6 w-11/12 flex flex-col rounded-2xl bg-white shadow-lg;
 }
 
 .form-page form{
@@ -23,7 +15,7 @@ label {
 }
 
 input {
-    @apply col-span-2 h-10 rounded-md border-2 font-semibold text-blue-800;
+    @apply col-span-2 h-10 px-5 rounded-md border-2 font-semibold text-blue-800;
 }
 
 small {
