--- a/src/components/SelectPlanPage/SelectPlanPage.module.css
+++ b/src/components/SelectPlanPage/SelectPlanPage.module.css
@@ -1,17 +1,9 @@
 section {
-    @apply relative bottom-20 mx-auto flex w-11/12 flex-col rounded-2xl border-2 bg-white p-9;
+    @apply relative bottom-20 mx-auto flex w-11/12 flex-col rounded-2xl bg-white p-9;
 }
 
 .plan-choice{
     @apply h-fit;
-}
-
-section h1{
-    @apply text-3xl font-bold text-blue-900;
-}
-
-section h3{
-    @apply my-6 text-xl font-normal text-gray-400;
 }
 
 .plans-container{
