--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
     height: 100vh;
 }
 
+section h1{
+    @apply text-3xl font-bold text-blue-900;
+}
+
+section h3{
+    @apply my-3 text-lg font-normal text-gray-400;
+}
+
 .attribution{
     font-size: 11px;
     text-align: center;
