--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
     height: 100vh;
 }
 
+section{
+    @apply relative w-11/12 mx-auto flex flex-col rounded-2xl bg-white p-6 shadow-lg;
+}
+
 section h1{
     @apply text-3xl font-bold text-blue-900;
 }
