--- a/src/components/NavigationButtons/NavigationButtons.module.css
+++ b/src/components/NavigationButtons/NavigationButtons.module.css
@@ -10,6 +10,14 @@ footer{
     @apply font-semibold text-gray-400;
 }
 
+footer button:last-of-type{
+    @apply h-12 w-1/3 rounded-lg font-semibold text-white;
+}
+
 .next-btn{
-    @apply h-12 w-1/4 rounded-lg bg-blue-900 font-semibold text-white;
+    @apply bg-blue-900;
+}
+
+.confirm-btn{
+    @apply bg-purple-800;
 }
