--- a/src/components/FinishUpPage/FinishUpPage.module.css
+++ b/src/components/FinishUpPage/FinishUpPage.module.css
@@ -12,7 +12,7 @@
 }
 
 .purchases-header h5{
-    @apply font-bold text-blue-900 capitalize;
+    @apply font-medium text-blue-900 capitalize;
 }
 
 .change-purchases {
@@ -36,11 +36,11 @@
 }
 
 .purchased-add-on span:last-of-type{
-    @apply font-semibold text-blue-900;
+    @apply font-medium text-blue-900;
 }
 
 .total-container{
-    @apply mt-5 px-1 flex flex-row justify-between;
+    @apply mt-5 px-3 flex flex-row justify-between;
 }
 
 .total-container span:first-of-type{
