--- a/src/components/StepsBar/StepsBar.module.css
+++ b/src/components/StepsBar/StepsBar.module.css
@@ -13,7 +13,7 @@ nav {
 
 
 .ul li {
-    @apply h-9 w-9 rounded-full border-2 border-white text-center text-xl text-white font-semibold;
+    @apply flex items-center justify-center h-10 w-10 rounded-full border-2 border-white text-xl text-white font-medium;
 }
 
 .current-page-li{
