--- a/src/components/PersonalFormPage/PersonalFormPage.module.css
+++ b/src/components/PersonalFormPage/PersonalFormPage.module.css
@@ -1,5 +1,5 @@
 .form-page {
-    @apply relative top-24 h-2/3 mx-auto w-11/12;
+    @apply relative top-24 h-2/3 mx-auto border-2 border-red-400;
 }
 
 .form-page form{
@@ -7,7 +7,7 @@
 }
 
 .input-container {
-    @apply my-2 grid grid-cols-2;
+    @apply my-3 grid grid-cols-2;
 }
 
 label {
