--- a/src/components/SelectPlanPage/SelectPlanPage.module.css
+++ b/src/components/SelectPlanPage/SelectPlanPage.module.css
@@ -11,7 +11,7 @@
 }
 
 .plan {
-    @apply my-1 h-1/4 flex flex-row justify-start items-center rounded-lg border-2 border-gray-400 p-2;
+    @apply my-1 h-1/4 flex flex-row justify-start items-center rounded-lg border-2 border-gray-400 p-2 sm:my-2;
 }
 
 .selected-plan{
@@ -55,7 +55,7 @@
 }
 
 .toggle-container{
-    @apply flex w-12 h-2/3 cursor-pointer items-center rounded-full bg-blue-900 p-1.5;
+    @apply flex w-12 h-2/3 cursor-pointer items-center rounded-full bg-blue-900 p-1.5 sm:h-4/5;
 }
 
 .monthly{
