--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 }
 
 section{
-    @apply relative w-11/12 mx-auto flex flex-col rounded-2xl bg-white p-6 shadow-lg;
+    @apply relative w-11/12 mx-auto flex flex-col rounded-2xl bg-white p-6 shadow-lg sm:w-3/4;
 }
 
 section h1{
