--- a/src/components/PersonalFormPage/PersonalFormPage.module.css
+++ b/src/components/PersonalFormPage/PersonalFormPage.module.css
@@ -1,5 +1,5 @@
 .form-page {
-    @apply relative top-24 h-2/3 mx-auto border-2 border-red-400;
+    @apply relative top-24 h-2/3 mx-auto;
 }
 
 .form-page form{
