--- a/src/components/StepsBar/StepsBar.module.css
+++ b/src/components/StepsBar/StepsBar.module.css
@@ -11,7 +11,6 @@ nav {
     list-style-type: none;
 }
 
-
 .ul li {
     @apply flex items-center justify-center h-10 w-10 rounded-full border-2 border-white text-xl text-white font-medium;
 }
@@ -28,3 +27,12 @@ nav {
     @apply flex flex-col hidden;
 }
 
+@media only screen and (min-width: 768px) and (orientation: portrait){
+    nav{
+        @apply h-1/4;
+    }
+
+    .ul li{
+        @apply w-12 h-12 text-2xl;
+    }
+}
