--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,18 @@ section h3{
     color: hsl(228, 45%, 44%);
 }
 
-@media only screen and (max-height: 500px) and (orientation: landscape){
+@media only screen and (max-height: 600px) and (orientation: landscape){
     #root{
-        height: 660px;
+        height: 680px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (orientation: portrait){
+    section{
+        @apply p-10;
+    }
+
+    section h3{
+        @apply text-xl;
     }
 }
