--- a/src/components/PickAddOnsPage/PickAddOnsPage.module.css
+++ b/src/components/PickAddOnsPage/PickAddOnsPage.module.css
@@ -1,14 +1,15 @@
 .add-ons{
-    @apply top-28;
+    @apply bottom-8;
     height: 60%;
 }
 
 .add-ons-container{
-    @apply flex flex-col items-center;
+    @apply flex flex-col items-center justify-around;
+    height: 70%;
 }
 
 .add-on {
-    @apply my-2 w-full flex flex-row items-center justify-around rounded-xl p-2;
+    @apply my-2 w-full h-1/3 flex flex-row items-center justify-around rounded-xl p-2;
 }
 
 .selected-add-on{
