--- a/src/components/SelectPlanPage/SelectPlanPage.module.css
+++ b/src/components/SelectPlanPage/SelectPlanPage.module.css
@@ -1,5 +1,6 @@
 .plan-choice{
-    @apply h-3/4 top-20;
+    @apply bottom-1;
+    height: 70%;
 }
 
 .plan-choice h3{
@@ -7,11 +8,11 @@
 }
 
 .plans-container{
-    @apply flex flex-col justify-around w-full;
+    @apply flex flex-col justify-around w-full h-4/5;
 }
 
 .plan {
-    @apply my-1 h-1/4 flex flex-row justify-start items-center rounded-lg border-2 border-gray-400 p-2 sm:my-2;
+    @apply my-2 h-1/3 flex flex-row justify-start items-center rounded-lg border-2 border-gray-400 p-2 sm:my-2;
 }
 
 .selected-plan{
@@ -39,11 +40,7 @@
 }
 
 .recurrence-setter{
-    @apply h-12 flex flex-row justify-around items-center rounded-md bg-purple-100 p-2;
-}
-
-.recurrence-setter-positioning{
-    @apply relative top-3 w-full;
+    @apply relative top-3 h-12 flex flex-row justify-around items-center rounded-md bg-purple-100 p-2;
 }
 
 .selected{
@@ -55,7 +52,8 @@
 }
 
 .toggle-container{
-    @apply flex w-12 h-2/3 cursor-pointer items-center rounded-full bg-blue-900 p-1.5 sm:h-4/5 md:w-16;
+    @apply flex w-12 cursor-pointer items-center rounded-full bg-blue-900 p-1.5 sm:h-4/5 md:w-16;
+    height: 90%;
 }
 
 .monthly{
@@ -67,7 +65,7 @@
 }
 
 .toggle{
-    @apply h-3.5 w-3.5 rounded-full bg-white md:h-4 w-4;
+    @apply h-3.5 w-3.5 rounded-full bg-white md:h-4 md:w-4;
 }
 
 @media only screen and (min-width: 768px){
