--- a/src/components/StepsBar/StepsBar.module.css
+++ b/src/components/StepsBar/StepsBar.module.css
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 nav {
-    @apply mb-10 py-10 absolute top-0 h-1/3 w-full bg-cover;
+    @apply py-4 absolute top-0 w-full bg-cover;
+    height: 28%;
 }
 
 .ul {
-    @apply mx-auto flex w-2/3 justify-around items-center;
+    @apply mx-auto flex w-2/3 justify-around items-center lg:flex-col items-start h-1/2;
     list-style-type: none;
 }
 
@@ -36,3 +37,13 @@ nav {
         @apply w-12 h-12 text-2xl;
     }
 }
+
+/*
+@media only screen and (min-width: 1024px){
+    nav{
+        height: 600px;
+        width: 300px;
+        background-size: auto;
+    }
+}
+*/
