--- a/src/components/NavigationButtons/NavigationButtons.module.css
+++ b/src/components/NavigationButtons/NavigationButtons.module.css
@@ -1,5 +1,5 @@
 footer{
-    @apply w-full absolute bottom-0 flex h-20 flex-row justify-between items-center bg-white p-5 font-medium sm:px-10 lg:col-span-2;
+    @apply w-full absolute bottom-0 flex h-20 flex-row justify-between items-center bg-white p-5 font-medium;
 }
 
 .hidden-prev-btn{
@@ -33,7 +33,13 @@ footer button:last-of-type{
     }
 }
 
-@media only screen and (min-width: 768px) and (orientation: portrait){
+@media only screen and (min-width: 640px) and (max-width: 767px){
+    footer{
+        @apply px-10;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) and (orientation: portrait){
     footer{
         @apply text-xl;
         height: 10%;
@@ -41,5 +47,11 @@ footer button:last-of-type{
 
     footer button:last-of-type{
         @apply h-3/4;
+    }
+}
+
+@media only screen and (min-width: 1024){
+    footer{
+        @apply col-span-2;
     }
 }
