--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 }
 
 #root{
+    @apply flex justify-center items-center lg:bg-blue-100;
     height: 100vh;
     width: 100vw;
     font-family: 'Ubuntu', sans-serif;
@@ -20,7 +21,7 @@
 }
 
 section{
-    @apply relative w-10/12 mx-auto flex flex-col rounded-2xl bg-white p-6 shadow-lg md:p-10;
+    @apply relative w-10/12 mx-auto flex flex-col rounded-2xl bg-white p-6 shadow-lg;
 }
 
 section h1{
@@ -43,6 +44,22 @@ section h3{
 @media only screen and (max-height: 600px) and (orientation: landscape){
     #root{
         height: 680px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px){
+    section{
+        @apply p-8;
+    }
+}
+
+@media only screen and (min-width: 1024px){
+    .app{
+        @apply h-3/4 w-11/12 m-auto grid grid-cols-2 grid-rows-2 p-5 bg-white;
+    }
+
+    section{
+        @apply border-2 border-blue-700;
     }
 }
 
