--- a/src/components/StepsBar/StepsBar.module.css
+++ b/src/components/StepsBar/StepsBar.module.css
@@ -12,11 +12,11 @@ nav {
     list-style-type: none;
 }
 
-.ul li {
-    @apply flex items-center justify-center h-10 w-10 rounded-full border-2 border-white text-xl text-white font-medium;
+.page-info{
+    @apply h-10 w-10 rounded-full border-2 flex items-center justify-center text-xl text-white font-medium border-white;
 }
 
-.current-page-li{
+.current-page-info{
     @apply bg-blue-300 border-0;
 }
 
@@ -25,7 +25,7 @@ nav {
 }
 
 .caption{
-    @apply flex flex-col hidden;
+    @apply hidden;
 }
 
 @media only screen and (min-width: 768px) and (orientation: portrait){
@@ -40,13 +40,33 @@ nav {
 
 @media only screen and (min-width: 1024px){
     nav{
-        @apply relative h-full row-span-2 rounded-xl;
+        @apply relative h-full row-span-2 rounded-xl z-10;
         height: 100%;
         width: 300px;
         background-size: 300px;
     }
 
     .ul{
-        @apply flex-col items-start h-1/2;
+        @apply flex-col items-start h-3/5 relative top-4;
+    }
+
+    li{
+        @apply flex flex-row w-full;
+    }
+
+    .page-info{
+        @apply mr-5;
+    }
+
+    .caption{
+        @apply flex flex-col text-white;
+    }
+
+    .caption span:first-of-type{
+        @apply font-thin;
+    }
+
+    .caption span:last-of-type{
+        @apply font-bold uppercase;
     }
 }
